Bug fixing
Fixing getLast